# IronHotKey

./: .gitignore  Cargo.toml  README.md  biome.json  package-lock.json  package.json
crates/ironhotkey-cli/: Cargo.toml
crates/ironhotkey-cli/src/: main.rs
crates/ironhotkey-cli/tests/: integration.rs
crates/ironhotkey-codegen/: Cargo.toml
crates/ironhotkey-codegen/src/: commands.rs  emitter.rs  lib.rs  transpile.rs
crates/ironhotkey-grammar/: Cargo.toml  build.rs
crates/ironhotkey-grammar/src/: lib.rs
crates/ironhotkey-napi/: Cargo.toml
crates/ironhotkey-napi/src/: lib.rs
crates/ironhotkey-parser/: Cargo.toml
crates/ironhotkey-parser/src/: ast.rs  lib.rs  transform.rs
crates/ironhotkey-runtime/: Cargo.toml
crates/ironhotkey-runtime/src/: engine.rs  lib.rs
crates/ironhotkey-runtime/src/modules/: directives.rs  disk.rs  env.rs  ext.rs  flow.rs  gui.rs  maths.rs  misc.rs  mnk.rs  mod.rs  process.rs  registry.rs  screen.rs  sound.rs  string.rs  types.rs  window.rs
crates/ironhotkey-runtime/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
reference/: Index.hhk
reference/docs/: AHKL_ChangeLog.htm  AHKL_DBGPClients.htm  ChangeLogHelp.htm  Compat.htm  Concepts.htm  FAQ.htm  Functions.htm  HotkeyFeatures.htm  Hotkeys.htm  Hotstrings.htm  KeyList.htm  Language.htm  Objects.htm  Program.htm  Scripts.htm  Tutorial.htm  Variables.htm  Welcome.htm  index.htm  license.htm  search.htm  settings.htm
reference/docs/lib/: Asc.htm  AutoTrim.htm  Block.htm  BlockInput.htm  Break.htm  Catch.htm  Chr.htm  Click.htm  ClipWait.htm  ComObjActive.htm  ComObjArray.htm  ComObjConnect.htm  ComObjCreate.htm  ComObjError.htm  ComObjFlags.htm  ComObjGet.htm  ComObjQuery.htm  ComObjType.htm  ComObjValue.htm  Continue.htm  Control.htm  ControlClick.htm  ControlFocus.htm  ControlGet.htm  ControlGetFocus.htm  ControlGetPos.htm  ControlGetText.htm  ControlMove.htm  ControlSend.htm  ControlSetText.htm  CoordMode.htm  Critical.htm  DetectHiddenText.htm  DetectHiddenWindows.htm  DllCall.htm  Drive.htm  DriveGet.htm  DriveSpaceFree.htm  Edit.htm  Else.htm  (+248 more)
reference/docs/misc/: Acknowledgements.htm  Ahk2ExeDirectives.htm  Arrays.htm  AutoIt2Compat.htm  CLSID-List.htm  Clipboard.htm  DPIScaling.htm  ErrorLevel.htm  EscapeChar.htm  FontsStandard.htm  Functor.htm  ImageHandles.htm  Labels.htm  Languages.htm  LongPaths.htm  Macros.htm  Override.htm  Performance.htm  RegEx-QuickRef.htm  RegExCallout.htm  Remap.htm  RemapController.htm  SendMessage.htm  SendMessageList.htm  Styles.htm  Threads.htm  WinTitle.htm  Winamp.htm  remove-userchoice.reg
reference/docs/scripts/: ControllerMouse.ahk  ControllerTest.ahk  UpDownCustomIncrements.ahk  index.htm
reference/docs/static/: content.css  content.js  dark.css  theme.css
reference/docs/static/source/: data_deprecate.js  data_index.js  data_toc.js  data_translate.js
scripts/: fetch-grammar.zx.ts  verify-index.zx.ts
tests/fixtures/: disk.ahk  hello.ahk  maths.ahk  process.ahk  screen.ahk  sound.ahk  string.ahk
