[workspace]
members = [
  "crates/ironhotkey-grammar",
  "crates/ironhotkey-parser",
  "crates/ironhotkey-codegen",
  "crates/ironhotkey-runtime",
  "crates/ironhotkey-napi",
  "crates/ironhotkey-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sepehr Laal"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.25"
rquickjs = { version = "0.8", features = ["bindgen", "classes", "properties", "parallel"] }
clap = { version = "4.5", features = ["derive"] }
napi = { version = "2", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2"
