[package]
name = "ironhotkey-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ironhotkey"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
ironhotkey-parser = { path = "../ironhotkey-parser" }
ironhotkey-codegen = { path = "../ironhotkey-codegen" }
ironhotkey-runtime = { path = "../ironhotkey-runtime" }
