[package]
name = "ironhotkey-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rquickjs.workspace = true
anyhow.workspace = true
serde_json.workspace = true
regex = "1.10"
glob = "0.3"
cross-path = "0.0.1"
filetime = "0.2"
rfd = "0.17"
sys-info = "0.9"
eject = "0.1.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
